--- a/index.html
+++ b/index.html
@@ -4,29 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Snearker Head</title>
 </head>
 <body>
-    <div class="container">
+    <div class="cont">
         <!--Menu de opções-->
         <nav class="menu">
             <div class="logo">
                <img src="./assets/933635.png" alt="logo" width="45rem"> 
             </div>
-            <ul class="menu-items">
-                <li><a href="#">Comprar</a></li>
-                <li><a href="#">Carrinho</a></li>
-                <li><a href="#">Nova Coleção</a></li>
-            </ul>
+            <div class="pos-f-t hamburguer">
+                <div class="collapse" id="navbarToggleExternalContent">
+                    <ul class="menu-items">
+                        <li><a href="#">Comprar</a></li>
+                        <li><a href="#">Carrinho</a></li>
+                        <li><a href="#">Nova Coleção</a></li>
+                    </ul>
+                </div>
+                <nav class="navbar navbar-dark">
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Alterna navegação">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                </nav>
+              </div>
         </nav>
         <!--Banner da Snearker Head-->
         <main class="section-banner">
-            <img src="./assets/banner.jpg" alt="banner" class="banner-img" >
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="./assets/banner.jpg" alt="Primeiro Slide"height="500px">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/banner2bom.jpeg" alt="Segundo Slide"height="500px">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/18_11_27_diadora3.jpg" alt="Terceiro Slide"
+                    height="500px">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Próximo</span>
+                </a>
+              </div>
         </main>
         <!--Card de Produtos-->
         <section id="content1">
-            <div class="card">
+            <div class="carde">
                 <div class="img1">
                     <img src="./assets/img1.jpg" alt="imagem 1" class="content1-img">
                 </div>
@@ -36,7 +72,7 @@
             
         </section>
         <section id="content2">
-            <div class="card">
+            <div class="carde">
                 <div class="img2">
                     <img src="./assets/img2.jpg" alt="imagem 2" width="200rem">
                 </div>
@@ -52,9 +88,12 @@
         <!--Footer-->
         <footer>
             <h2>Nossos contatos:</h2>
-            <p>11 94719-4540</p>
             <p>pedro.phoa1405@gmail.com</p>
+            <p>11 94719-4540</p>
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
